--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
+  firebase_core: ^1.7.0
+  google_sign_in: ^5.1.1
+  logger: ^1.1.0
+  shared_preferences: ^2.0.8
+  google_ml_kit: ^0.7.2
+  camera: ^0.9.4+2
+  image_picker: ^0.8.4+2
 
 dev_dependencies:
   flutter_test:
